fix: fixed a bug where the bolt div would cause overflow on x axis

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -2,26 +2,24 @@ header .titleText {
 display: flex;
 flex-direction: column;
 align-items: center;
-h1 {
-   color: $accent;
-   margin-bottom: -100px;
-   font-size: 3rem;
-   margin-top: -80px;
-}
-h2 {
-    color: $cyan;
-    font-size: 1.5rem;
-    text-align: left;
-    margin-left: 20px;
-    margin-top: -10px;
-}
+    h1 {
+        color: $accent;
+        margin-bottom: -5rem;
+        font-size: 3rem;
+        margin-top: -4rem;
+    }
+    h2 {
+        color: $cyan;
+        font-size: 1.5rem;
+        text-align: left;
+        margin-left: 1rem;
+        margin-top: -0.5rem;
+    }
 }
 
 .bolt {
-    display: flex;
-    justify-content: center;
     transform: rotate(25deg);
-    margin-top: 10px;
+    margin-top: 0.5rem;
 }
 
 
